Issue #1343: Improve selection list layout on small screens.
Fixes: https://github.com/openmediavault/openmediavault/issues/1343

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/selection-list-page/selection-list-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/selection-list-page/selection-list-page.component.scss
@@ -26,8 +26,13 @@
   .mat-selection-list {
     padding-top: unset;
 
-    .mat-hint {
-      font-size: 75%;
+    .mat-list-option {
+      .mat-hint {
+        font-size: 75%;
+        font-weight: 400;
+        line-height: 1.125;
+        margin-bottom: 5px;
+      }
     }
   }
 }
